@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.902.2.16 2014/10/02 19:34:50 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.902.2.17 2014/10/02 20:13:29 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -13825,7 +13825,7 @@ Ffigure_missing
 ?stats
 ?statistics
  Syntax:
-      stats {<ranges>} 'filename' {using N{:M}} {name 'prefix'} {{no}output}
+      stats {<ranges>} 'filename' {matrix | using N{:M}} {name 'prefix'} {{no}output}
 
  This command prepares a statistical summary of the data in one or two columns
  of a file. The using specifier is interpreted in the same way as for plot
@@ -13928,6 +13928,10 @@ Ffigure_missing
 #\verb@STATS_pos_min_y@   &   &  x coordinate of a point with minimum y value \\
 #\verb@STATS_pos_max_y@   &   &  x coordinate of a point with maximum y value \\
 @end table
+
+ When `matrix` is specified, the `using` option is ignored and the "z"-values 
+ are treated as one-dimensional data set. The matrix dimensions are saved in the
+ variables STATS_size_x and STATS_size_y.
 
  It may be convenient to track the statistics from more than one file at the
  same time. The `name` option causes the default prefix "STATS" to be replaced
